recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:38: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime16.Spiral'
	override def run() {
                     ^